# desbordante-core

./: CMakeLists.txt  build.sh  do_test.sh
.github/workflows/: check-codestyle.yml
python-bindings/: CMakeLists.txt  DictToParamsMap.cpp  DictToParamsMap.h  PythonBindings.cpp
python_bindings/: bindings.cpp  py_primitive.h
src/: CMakeLists.txt  main.cpp
src/algorithms/: AlgoFactory.h  TypoMiner.h  algo_factory.h  ar_algorithm.cpp  ar_algorithm.h  ar_algorithm_enums.h  fastfds.cpp  fastfds.h  fd_algorithm.cpp  fd_algorithm.h  fd_mine.cpp  fd_mine.h  fun.cpp  fun.h  metric_verifier.cpp  metric_verifier.h  metric_verifier_enums.h  pli_based_fd_algorithm.cpp  pli_based_fd_algorithm.h  primitive.cpp  primitive.h  primitive_enum.h  pyro.cpp  pyro.h  tane.cpp  tane.h  typo_miner.cpp  typo_miner.h
src/algorithms/aidfd/: aid.cpp  aid.h
src/algorithms/association_rules/: apriori.h
src/algorithms/depminer/: depminer.cpp  depminer.h
src/algorithms/dfd/: dfd.cpp  dfd.h
src/algorithms/fdep/: fdep.cpp  fdep.h
src/algorithms/hyfd/: hyfd.h
src/algorithms/options/: common_functions.cpp  common_functions.h  common_options.h  descriptions.h  info.cpp  ioption.h  names.h  option.h  option_descriptions.h  option_names.h  option_type.h
src/algorithms/statistics/: csv_stats.cpp  csv_stats.h
src/core/: CMakeLists.txt  configuration.h  main.cpp
src/model/: transactional_data.h  typed_column_data.cpp  typed_column_data.h
src/python_bindings/: bindings.cpp
src/tests/: test_hymd.cpp  test_hymd_metrics.cpp
src/util/: agree_set_factory.cpp  enum_to_available_values.h  option_names.h
test2_results/: get_times.py
tests/: TestAlgoInterfaces.cpp  TestFdMine.cpp  TestMetricVerifier.cpp  TestTypoMiner.cpp  TestingUtils.h  test_algo_interfaces.cpp  test_algorithm.cpp  test_apriori.cpp  test_csv_stats.cpp  test_fd_mine.cpp  test_metric_verifier.cpp  test_typed_column_data.cpp  test_typo_miner.cpp  testing_utils.h
(+308 files in other folders)
